projects/projects.css
/*fonts*/
@font-face {
    font-family: 'robotolight';
    src: url('../fonts/roboto_light_macroman/Roboto-Light-webfont.eot');
    src: url('../fonts/roboto_light_macroman/Roboto-Light-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/roboto_light_macroman/Roboto-Light-webfont.woff') format('woff'),
         url('../fonts/roboto_light_macroman/Roboto-Light-webfont.ttf') format('truetype'),
         url('../fonts/roboto_light_macroman/Roboto-Light-webfont.svg#robotolight') format('svg');
    font-weight: normal;
    font-style: normal;

}
@font-face {
    font-family: 'robotomedium';
    src: url('../fonts/roboto_medium_macroman/Roboto-Medium-webfont.eot');
    src: url('../fonts/roboto_medium_macroman/Roboto-Medium-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/roboto_medium_macroman/Roboto-Medium-webfont.woff') format('woff'),
         url('../fonts/roboto_medium_macroman/Roboto-Medium-webfont.ttf') format('truetype'),
         url('../fonts/roboto_medium_macroman/Roboto-Medium-webfont.svg#robotomedium') format('svg');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'robotoregular';
    src: url('../fonts/roboto_regular_macroman/Roboto-Regular-webfont.eot');
    src: url('../fonts/roboto_regular_macroman/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/roboto_regular_macroman/Roboto-Regular-webfont.woff') format('woff'),
         url('../fonts/roboto_regular_macroman/Roboto-Regular-webfont.ttf') format('truetype'),
         url('../fonts/roboto_regular_macroman/Roboto-Regular-webfont.svg#robotoregular') format('svg');
    font-weight: 300;
    font-style: normal;

}



/* main */
body, html {
	background-color:#fff;
	font-family:'Inconsolata',Helvetica, Arial, sans-serif;
	font-size:1em;
	/*letter-spacing: 1px;*/
	color:#333;
	margin:0px;
	line-height:1.4em;
	width:100%;
}

a:link, a:visited {
	color:#333;
	text-decoration:none;
}
a:hover {
	color: #D90057;
	text-decoration:underline;
}
.clear {
	clear:both;
}
#wrapper {
	width:90%;
	max-width: 1024px;
	margin: 0px auto 50px;
}

/* nav */
/* header */
#header {
	border-bottom: 1px solid #d3d3d3;
	font-family: 'Montserrat', sans-serif;
	font-weight: 400;
	font-size: 4em;
	line-height: 100%;
	text-transform: uppercase;
	text-align: center;
	padding: 2% 0px;
	letter-spacing: 1px;
	color: #D90057;
}
@media all and (max-width: 630px) {
	#header {
		padding:0px;
		margin: 0px;
	}
	#header p {
		margin:20px;
	}
}
#subhed {
	margin:20px 0px;
	font-size: 0.3em;
	opacity: 0.7;
	color: #333;
}
#header a {
	color: #D90057;
}
#header a:hover {
	text-decoration: none;
}

/* title */
#project-title {
	text-align: center;
	font-family: 'Inconsolata', Helvetica, Arial, sans-serif;
	line-height: 1.5em;
	text-transform: uppercase;
	margin-top: 20px;
	font-weight: 700;
}
@media all and (min-width: 630px) {
	#project-title {
		font-size: 1.2em;
		padding:10px 20px;
	}
}
@media all and (max-width: 630px) {
	#project-title {
		font-size: 1em;
		padding: 10px;
	}
}

#footer {
	font-size: 0.8em;
	text-align: center;
	padding:20px;
	border-top: 1px solid #d3d3d3;
}


/* project info */
.role {
	color:#aaa;
}
#project-info {
	width:80%;
	margin:20px auto 40px auto;
	line-height: 1.5em;
	font-size: 1.1em;
	letter-spacing: 0.5px;
}
#project-info a {
	color: #D90057;;
}
#project-info .main-img {
	text-align: center;
	margin-bottom: 50px;
	border: 1px solid #d3d3d3;
}
#project-info .main-img img, #project-info .main-img video {
	width: 100%;
}
.video-container { 
	position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; 
} 
.video-container iframe, .video-container object, .video-container embed { 
	position: absolute; top: 0; left: 0; width: 100%; height: 100%; 
}

#project-info h2 {
	text-transform: uppercase;
	font-family: 'Inconsolata', Helvetica, Arial, sans-serif;
	color:#666;
	font-size: 0.85em;
	margin: 20px 0px;
}
#project-info ul {
	margin-left:20px;
}

